<resources>
    <string name="app_name">Acil Numaralar</string>
    <string name="app_share">Acil Numaralar uygulaması: https://play.google.com/store/apps/details?id=com.mobilegion.sba.acil.numaralar</string>

    <string name="phones">Numaralar</string>
    <string name="global_phones">Ülke Geneli</string>

    <string name="nav_calls">Aramalar</string>
    <string name="nav_my_contacts">Rehberim</string>
    <string name="nav_settings">Ayarlar</string>

    <string name="recommend_to_friends">Arkadaşlarınıza bizi tavsiye edin</string>
    <string name="notification_setting">Bildirim</string>
    <string name="fallow">TAKİP EDİN</string>
    <string name="context">Ayvalık Yerel İnsiyatif</string>
    <string name="municipality">Belediye</string>
    <string name="from">from</string>
    <string name="from_desc_one"></string>
    <string name="Language">Dil</string>

    <string name="whatsapp_hi">Merhaba</string>
    <string name="whatsapp_info">Whatsapp uygulaması yüklü değil.</string>

    <string name="network_close">İnternetiniz Kapalı!</string>
    <string name="network_message">Lütfen internet bağlantınızı kontrol ediniz!</string>
    <string name="network_city_message">Şehir seçimi için internetinizi açmanız gerekmektedir.</string>
    <string name="network_district_message">İlçe seçimi çin internetinizi açmanız gerekmektedir.</string>
    <string name="ok">Tamam</string>
    <string name="cancel">Vazgeç</string>

    <string name="version">Versiyon</string>

    <string name="show_permission">İzinleri Aç</string>
    <string name="permission_title">Erişim İzniniz Açık Değil</string>
    <string name="permission_info">İşlemi gerçekleştirmek için gerekli izinleri vermelisiniz.</string>

    <string name="select_city">Şehir Seçiniz</string>
    <string name="select_district">İlçe Seçiniz</string>
    <string name="info_city_context">Lütfen Şehir Seçiniz!</string>
    <string name="selected">Seçiniz</string>

    <string name="clipboard_info">Panoya Kopyalandı</string>

    <string name="report_text">Hatalı numara bildir</string>
    <string name="report">Bildir</string>

    <string name="error_response">Başarısız</string>
    <string name="success_response">Başarılı</string>

    <string-array name="languages">
        <item>Türkçe</item>
        <item>İngilizce</item>
    </string-array>

</resources>
