<?xml version="1.0" encoding="utf-8"?><!--
  ~  * Created by Serhat Bekir AK on 26.03.2020 23:59
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 26.03.2020 23:29
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:clickable="true"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/social_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/social"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_instagram" />

            <ImageView
                android:id="@+id/whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_whatsapp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/muni_social_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/muni_social"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/muni_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_facebook" />


            <ImageView
                android:id="@+id/muni_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_whatsapp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/language"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/setting"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="30dp"
                android:text="Türkçe"
                android:gravity="center"
                android:src="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:textColor="@color/textColor"
                android:textSize="17dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/share"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/language"
            android:background="@color/white"
            android:paddingLeft="30dp"
            android:layout_marginTop="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_to_friends"
                android:textColor="@color/textColor"
                android:textSize="17dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/share"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:background="@color/white"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_setting"
                android:textColor="@color/textColor"
                android:textSize="17dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/muni_social_layout"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/from_one"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/from" />

            <ImageView
                android:id="@+id/github_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/from_one"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:textColor="@color/textColor" />


        </RelativeLayout>

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/backButton"
            android:layout_alignLeft="@+id/backButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/nav_settings"
            android:textColor="@color/textColor"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_left"/>

        <TextView
            android:id="@+id/muni_social"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/social_layout"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/municipality"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/fallow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/fallow"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/social"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fallow"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/context"
            android:textColor="@color/textColor"
            android:textSize="18dp" />


    </RelativeLayout>

</ScrollView>