<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#F8F8F8"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"/>

        <LinearLayout
            android:id="@+id/select_layout"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/panel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/provinces_button_bg"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/select_city"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/city_button_bg">

                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/ic_arrow_down" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_toStartOf="@+id/arrow"
                        android:layout_toLeftOf="@+id/arrow"
                        android:gravity="center"
                        android:text="@string/select_city"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/select_district"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/arrow_provinces"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/ic_arrow_down" />

                    <TextView
                        android:id="@+id/district"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toStartOf="@+id/arrow_provinces"
                        android:layout_toLeftOf="@+id/arrow_provinces"
                        android:gravity="center"
                        android:text="@string/select_district"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/panel"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/panel"
                android:src="@drawable/nav_setting"
                android:tint="@color/white" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:overScrollMode="never"
            android:layout_below="@+id/select_layout"
            android:background="@android:color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_major_phones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2" />

                <TextView
                    android:id="@+id/phones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorTwo"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="23dp"
                    android:textStyle="bold"
                    android:text="@string/phones"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_public_phones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorTwo"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="23dp"
                    android:textStyle="bold"
                    android:text="@string/global_phones"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_global_phones"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
